--- a/.gitignore
+++ b/.gitignore
@@ -243,7 +243,7 @@ end
 local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/xaxaxaxaxaxaxaxaxa/Libraries/main/UI's/Linoria/Source.lua"))()
 Library:SetWatermark("Press RightCtrl")
 
-local Window = Library:CreateWindow("Universal Silent Aim, by Averiias, xaxa, and Stefanuk12")
+local Window = Library:CreateWindow("Universal Silent Aim")
 local GeneralTab = Window:AddTab("General")
 local MainBOX = GeneralTab:AddLeftTabbox("Main") do
     local Main = MainBOX:AddTab("Main")
